--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hint_word">Word...</string>
     <string name="hint_definition">Definition...</string>
     <string name="button_save">Save</string>
-    <string name="empty_not_saved">Word not saved because it is empty.</string>
+    <string name="empty_not_saved">Definition not saved because it is empty or no changes made.</string>
     <string name="radio_button_noun">Noun</string>
     <string name="radio_button_preposition">Preposition</string>
     <string name="radio_button_adjective">Adjective</string>
@@ -13,5 +13,7 @@
     <string name="new_definition_title">NEW WORD ADDED!</string>
     <string name="entry_error">You must enter a word and definition!</string>
     <string name="radio_button_error">You must select a speech category button!</string>
+    <string name="definition_display">%s (%s) &#8211; %s</string>
+    <string name="No_Word">No Word!</string>
 
 </resources>
